After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674395 - Statistics screen keeps running
Statistics screen keeps running
Status: RESOLVED FIXED
Product: gnome-power-manager
Classification: Deprecated
Component: gnome-power-statistics
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Power Manager Maintainer(s)
GNOME Power Manager Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-04-19 14:51 UTC by Paul van Tilburg
Modified: 2012-09-10 09:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (597 bytes, patch)
2012-09-10 08:19 UTC, Martin Pitt
committed Details | Review

Description Paul van Tilburg 2012-04-19 14:51:01 UTC
When gnome-power-statistics is launched and then dismissed using the Escape key, it keeps running.  The next time it is launched, it hangs.

When using the window manager close button or the Close button in the bottem, everything is ok.
Comment 1 Ivan Sagalaev 2012-07-28 01:26:00 UTC
I most certainly have the same issue. The only difference with the original description is that for me it also hangs when closed by the close button in the window title too. But the symptoms are the same: the process gnome-power-statistics doesn't get killed, and on the next start the window shows up blank, probably hanging before it could draw itself.

The bug is easily reproducible (checked under Ubuntu 12.04 and 12.10 alpha 3):

1. Use a laptop
2. Run gnome-power-statistics - the Power Statistics window shows up looking normal with all the UI elements visible and working.
3. Close the Power Statistics window with the Close button in the window title or by pressing [Esc].
4. `ps aux | grep statistics` shows the process is still running.
5. Open Power Statistics again - the window shows up without any UI elements, just a plain gray background under the window title.

I also reported this in Ubuntu Launchpad: https://bugs.launchpad.net/ubuntu/+source/gnome-power-manager/+bug/1030125
Comment 2 Martin Pitt 2012-09-10 08:19:56 UTC
Created attachment 223883 [details] [review]
Fix

I confirm this bug. This patch from Tim Rawlinson fixes this.
Comment 3 Richard Hughes 2012-09-10 08:34:57 UTC
Review of attachment 223883 [details] [review]:

Looks good to me, thanks!
Comment 4 Martin Pitt 2012-09-10 09:21:37 UTC
Comment on attachment 223883 [details] [review]
Fix

Pushed, thanks for the fast review!