Terminate gnome-power-statistics when closing the window

Otherwise gnome-power-statistics keeps running, and when trying to open it
again you just get an empty window.

Thanks to Tim Rawlinson for the fix!

https://bugzilla.gnome.org/show_bug.cgi?id=674395